--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/earlyaccess/cwtexyen.css);
+@import url('https://fonts.googleapis.com/earlyaccess/cwtexyen.css');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700;800&display=swap');
 
 
